[tool.poetry]
name = "test-api"
version = "0.1.0"
description = ""
authors = ["Marcio Martinez <marcioedumartinez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = "^0.30.6"
httpx = "^0.27.2"
gremlinpython = "^3.7.2"
faker = "^28.4.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.28.0"

[tool.poe.tasks]
up = "docker compose -f docker/docker-compose.yml up -d"
down = "docker compose -f docker/docker-compose.yml down"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
